@@ -23,6 +23,7 @@ FrostWire 2.4.0 build 681 - AUG/14/2021
  - androidx.recyclerview:recyclerview:1.2.1
  - androidx.core:core-ktx:1.6.0
  - com.google.android.gms:play-services-ads:20.2.0
+ - com.android.billingclient:billing:4.0.0
 
 FrostWire 2.3.2 build 679 (experimental/very unstable) - JUN/18/2021
  - We're submitting this to Google Play so they don't remove the app but it's broken
